@@ -24,7 +24,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 public class EinsteinService implements EmbeddingService {
 
@@ -114,7 +113,7 @@ public class EinsteinService implements EmbeddingService {
 
   @Override
   public Response<List<Embedding>> embedTexts(List<TextSegment> textSegments) {
-    List<String> texts = textSegments.stream().map(TextSegment::text).collect(Collectors.toList());
+    List<String> texts = textSegments.stream().map(TextSegment::text).toList();
     {
         List<Embedding> embeddings = new ArrayList<>();
         int tokenUsage = 0;
